--- a/jupyter-export/churn-prediction.html
+++ b/jupyter-export/churn-prediction.html
@@ -16943,6 +16943,7 @@ jp-needs-light-background
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><em>Black box</em> – закрытая модель, нацеленная на прогнозирование с максимальной точностью.</p>
+<p>Оптимизация гиперпараметров выполнена с помощью <a href="https://d-01.github.io/static/jupyter-export/sf-grid-hpo.html">визуального поиска по сетке</a>.</p>
 
 </div>
 </div>
